--- a/website/app.html
+++ b/website/app.html
@@ -73,8 +73,8 @@
                 <option value=2>Formerly Smoked</option>
             </select>
 
-            <label for="image_upload">Upload Image:</label>
-            <input type="file" id="image_upload" name="image_upload" accept="image/*" required>
+            <!-- <label for="image_upload">Upload Image:</label>
+            <input type="file" id="image_upload" name="image_upload" accept="image/*" required> -->
 
             <button type="submit">Submit</button>
         </form>
